# el-xurrer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Multi-Profile Fanvue OAuth Implementation plan.md  README.md  TODO_SUMMARY.md  main.py  main_instagram.py  main_mtg.py  mypy.ini  pyproject.toml  requirements.txt
apps/ai-content-pipeline/: .env.example  AGENTS.md  README.md  main.py
apps/fanvue-fastapi/: .env.example  AGENTS.md  README.md  main.py
automation/fanvue_client/: fanvue_api_publisher.py  fanvue_publisher.py
automation/gdrive/: sync_resources.py
automation/meta_api/: graph_api.py
bot_services/DEPRECATED_X_api/: x_api.py
bot_services/fanvue_poster_bot/: fanvue_publisher.py  fanvue_publisher_se.py
bot_services/meta_api/: graph_api.py
bot_services/youtube/: youtube.py
chat_gpt/: chat_gpt.py
docs/plans/: 2026-03-20-global-llm-intelligence-routing-design.md
fanvue-fastapi/: .env.example  AGENTS.md  CLAUDE.md  main.py  requirements.txt
fanvue-fastapi/app/: config.py  dependencies.py  fanvue.py  media.py  (+3 more)
instagram_profiles/: laura_vigne_content.json
llm/: api_keys.py  base_llm.py  constants.py  fanvue_llm.py  meta_llm.py  types.py  utils.py
main_components/: base_main.py  config.py  constants.py  fanvue_auth.py  planning_manager.py  posting_scheduler.py  profile.py  publications_generator.py
mains/: base_main.py  main.py  main_fanvue.py  main_fanvue_typer.py  main_meta.py  main_meta_typer.py  main_talker_bot.py  planning_manager.py  posting_scheduler.py  publications_generator.py
pipeline/: instagram_pipeline.py  pipeline.py  pipeline_instagram.py
scripts/: sync_resources.py
tests/: README.md  test_fanvue_api_publisher.py  test_fanvue_auth.py
utils/: bypass_captcha.py  detect_captcha.py  exceptions.py  one_request_server.py  utils.py
video_editors/: movie_editor_base.py  movie_editor_mtg.py  movie_editor_sentece_subtitles.py
(+187 files in other folders)
